# BIRL_modular_robot

./: README.md  pre-requisite.sh
birl_module_canopen/: CMakeLists.txt  package.xml
birl_module_canopen/config/: 100.ccx  CopleyAmp.eds  can.yaml  (+19 more)
climbot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
manipulator5d_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
manipulator5d_moveit_config/config/: Manipulator5d.srdf  controller.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml
manipulator5d_moveit_config/launch/: Manipulator5d_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  manipulator5d_moveit_controller_manager.launch  move_group.launch  moveit.rviz  moveit_controller_manager.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
manipulator5d_moveit_config/scene/: table_pick_and_place.scene
modu_manipulator_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
modular_robot/: CMakeLists.txt  CMakeLists.txt~  package.xml
modular_robot_control/: CMakeLists.txt  README.md  package.xml
moduleManipulator_moveit_config/: CMakeLists.txt  package.xml
mr_description/: CMakeLists.txt  README.md  manifest.xml  package.xml  package.xml~  urdf.rviz
mr_setup_detect/: CMakeLists.txt  README.md  package.xml
pole_detect/: CMakeLists.txt  package.xml
(+274 files in other folders)
